plugins {
    id 'java'
}

//javafx {
//    version = "15.0.1"
//    modules = [ 'javafx.controls' ]
//}

group 'com.jean'
version '1.0-SNAPSHOT'


subprojects {

    apply plugin: 'java'

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    [compileJava, compileTestJava]*.options*.encoding = "UTF-8"

    dependencies {
        implementation "org.slf4j:jcl-over-slf4j:1.7.25"
        implementation fileTree(dir: '../libs', include: '*.jar')
    }


    repositories {
        maven {
            url 'https://maven.aliyun.com/repository/public/'
        }
        mavenLocal()
        mavenCentral()
    }
}
